# formHTR

./: CHANGELOG.md  MANIFEST.in  README.md  annotate_ROIs.py  automatic_align.py  export_logsheet.py  manual_align.py  pdf_dimensions.py  process_logsheet.py  pyproject.toml  select_ROIs.py
.github/workflows/: publish_pypi.yml
libs/processing/: align_images.py  read_content.py  rtree.py  store_results.py
libs/services/: call_services.py
src/formhtr/: __init__.py  auto_align.py  cli.py  deps.py  export_logsheet.py  logsheet.py  manual_align.py  pdf_utils.py  roi_tools.py
src/formhtr/libs/: logsheet_config.py
src/formhtr/libs/extract_ROI/: autodect.py
src/formhtr/libs/processing/: align_images.py  read_content.py  rtree.py  store_results.py
src/formhtr/libs/services/: amazon_vision.py  azure_vision.py  call_services.py  google_vision.py
